SXCSP-260: Adding docker properties, app properties fixes and configuration changes in ES Client

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
@@ -1,3 +1,8 @@
+## CSP NAME
+server.name = ${CSP_NAME}
+
+server.port=${REGREP_DOCR_PORT}
+
 # Regular Reporting Basis and Cron Expressions
 regrep.basis.daily=true
 regrep.basis.weekly=true
@@ -19,14 +24,14 @@ regrep.cron.yearly=0 0 9 1 JAN ?
 # Regular Reports date format in email message
 regrep.date.pattern=yyyy-MM-dd
 
-# elasticsearch instance settings
+# elasticsearch settings
 app.es.protocol=https
-app.es.host=localhost
-app.es.port=9200
-app.es.path=/cspdata
+app.es.host=${ES_LOCAL_DOMAIN}
+app.es.port=${ES_PORT}
+app.es.path=${ES_PATH_BASE}
 app.es.client.ssl.enabled=true
-app.es.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
-app.es.client.ssl.jks.keystore.password = 123456
+app.es.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
+app.es.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
 
 
 # spring.mail settings
