--- a/csp-apps/regular-reports/regrep-es-client/pom.xml
+++ b/csp-apps/regular-reports/regrep-es-client/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>regrep-commons</artifactId>
             <version>0.4.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.intrasoft.csp</groupId>
+            <artifactId>libraries-restclient</artifactId>
+            <version>3.6.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     
