SXCSP-260: Adding CSP properties and logback resource

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
@@ -28,6 +28,12 @@ app.es.client.ssl.enabled=true
 app.es.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
 app.es.client.ssl.jks.keystore.password = 123456
 
+csp.retry.backOffPeriod=10
+csp.retry.maxAttempts=1
+
+csp.client.ssl.enabled = false
+csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
+csp.client.ssl.jks.keystore.password = 123456
 
 # spring.mail settings
 spring.mail.default-encoding=UTF-8
