SXCSP-2960: Fixes in properties

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
@@ -32,6 +32,8 @@ app.es.path=${ES_PATH_BASE}
 app.es.client.ssl.enabled=true
 app.es.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 app.es.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
+app.es.csp.retry.backOffPeriod=5000
+app.es.csp.retry.maxAttempts=3
 
 
 # spring.mail settings
