--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
@@ -24,7 +24,7 @@ app.es.protocol=https
 app.es.host=localhost
 app.es.port=9200
 app.es.path=/cspdata
-app.es.client.ssl.enabled=true
+app.es.client.ssl.enabled=false
 app.es.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
 app.es.client.ssl.jks.keystore.password = 123456
 
