--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
@@ -38,14 +38,16 @@ app.es.csp.retry.maxAttempts=3
 
 # spring.mail settings
 spring.mail.default-encoding=UTF-8
-spring.mail.host=<smtp.server>
-spring.mail.username=<username>
-spring.mail.password=<password>
-spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.host=${XXXMAILSERVERHOSTXXX:smtp.mailgun.org}
+spring.mail.port=${XXXMAILSERVERPORTXXX:587}
+spring.mail.username=${XXXMAILUSERNAMEXXX:do-not-reply@sastix.com}
+spring.mail.password=${XXXMAILPASSWORDXXX:a!Str-1-3-X2}
+spring.mail.properties.mail.smtp.socketFactory.port=${XXXMAILSERVERPORTXXX:587}
 
 # spring.thymeleaf settings
 spring.thymeleaf.mode=LEGACYHTML5
