SXCSP-260: Update properties

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
@@ -11,8 +11,9 @@ regrep.basis.quarterly=true
 regrep.basis.yearly=true
 
 # Regular Reports Email object sender/recipient address
-regrep.from=<sender-email>
-regrep.to=<recipient-email>
+# see here: https://confluence.sastix.com/pages/viewpage.action?spaceKey=SXCSP&title=SMTP+configuration
+regrep.from=${MAIL_SENDER_EMAIL}
+regrep.to=${XXXMAILUSERNAMEXXX}
 
 # Cron Expressions
 regrep.cron.daily=0 0 9 ? * *
