--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
@@ -13,7 +13,7 @@ regrep.basis.yearly=true
 # Regular Reports Email object sender/recipient address
 # see here: https://confluence.sastix.com/pages/viewpage.action?spaceKey=SXCSP&title=SMTP+configuration
 regrep.from=${MAIL_SENDER_EMAIL}
-regrep.to=${XXXMAILUSERNAMEXXX}
+regrep.to=${MAIL_ADMIN_EMAIL}
 
 # Cron Expressions
 regrep.cron.daily=0 0 9 ? * *
