Teleconf + Jitsi port change to 6443, other fixes

--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-docker.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-docker.properties
@@ -20,7 +20,7 @@ server.port=9300
 #  SECURITY
 ###
 security.basic.enabled=false
-enable.oam=false
+enable.oam=true
 
 
 ###
@@ -40,7 +40,7 @@ spring.mail.properties.mail.smtp.socketFactory.port=${XXXMAILSERVERPORTXXX:587}
 ###
 teleconf.protocol=https
 teleconf.host=${VCB_TELECONF_DOMAIN}
-teleconf.port=443
+teleconf.port=6443
 teleconf.path=
 
 
@@ -56,3 +56,10 @@ app.tc.path.personcontacts = ${TC_PATH_PERSONCONTACTS}
 app.tc.client.ssl.enabled=true
 app.tc.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 app.tc.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
+
+
+###
+#  EMAIL
+###
+app.mail.sender.name=${MAIL_SENDER_NAME:CSP VCB Admin}
+app.mail.sender.email=${MAIL_SENDER_EMAIL:user@example.com}
