--- a/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application-docker.properties
+++ b/csp-apps/vcbridge/vcb-teleconf/src/main/resources/application-docker.properties
@@ -14,7 +14,7 @@ h2.db.file = /opt/vcb/data/vcbdb
 #   Jitsi
 ###
 vc.protocol=https
-vc.host=${JITSI_LOCAL_DOMAIN}
-vc.port=443
+vc.host=${JITSI_DOMAIN}
+vc.port=6443
 
 
