--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
@@ -29,18 +29,25 @@ spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
+# Email
+app.mail.sender.name=Dimitris Karadimas
+app.mail.sender.email=karadimas@ieee.org
 
 
-
-
-
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
-spring.mail.username=karadimas@gmail.com
-spring.mail.password=gchkvbaonxycqfss
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.username=do-not-reply@sastix.com
+spring.mail.password=a!Str-1-3-X2
+spring.mail.smtp.auth=true
+spring.mail.smtps.quitwait=false
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+spring.mail.properties.mail.smtp.socketFactory.port=587
+
+XXXMAILSERVERHOSTXXX=${spring.mail.host}
+XXXMAILSERVERPORTXXX=${spring.mail.port}
+XXXMAILUSERNAMEXXX=${spring.mail.username}
+XXXMAILPASSWORDXXX=${spring.mail.password}
+MAIL_SENDER_NAME=${app.mail.sender.name}
+MAIL_SENDER_EMAIL=${app.mail.sender.email}
