--- a/csp-apps/configuration/conf-server/src/main/resources/application-docker.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application-docker.properties
@@ -24,7 +24,7 @@ spring.http.multipart.maxRequestSize=1512MB
 
 
 # DATA SOURCE
-spring.datasource.url=jdbc:h2:file:/opt/cfg/data/anondb;
+spring.datasource.url=jdbc:h2:file:/opt/cfg/data/cfgdb;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
