fixed the csp client jks password in config file

--- a/csp-apps/intelmq/intelmq-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/intelmq/intelmq-emitter/src/main/resources/application-docker.properties
@@ -10,9 +10,8 @@ server.port=8081
 csp.server.protocol = https
 csp.client.ssl.enabled = true
 csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
-#csp.client.ssl.jks.keystore = file:/opt/csp/demo1-rt-emitter.jks
-#csp.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
-csp.client.ssl.jks.keystore.password = changeme
+csp.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
+
 
 csp.server.host = ${IL_LOCAL_DOMAIN}
 #################csp.server.host = integration.local.demo2-csp.athens.intrasoft-intl.private
@@ -48,9 +47,8 @@ app.tc.port = 443
 app.tc.path.circles = ${TC_PATH_CIRCLES}
 app.tc.path.teams = ${TC_PATH_TEAMS}
 app.tc.client.ssl.enabled=true
-app.tc.client.ssl.jks.keystore = classpath:ssl/server/csp-internal.jks
+app.tc.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 app.tc.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
-##############app.tc.client.ssl.jks.keystore.password = changeme
 
 
 ## ANON
