--- a/csp-apps/intelmq/intelmq-emitter/src/main/resources/application.properties
+++ b/csp-apps/intelmq/intelmq-emitter/src/main/resources/application.properties
@@ -18,9 +18,8 @@ csp.retry.backOffPeriod=10
 csp.retry.maxAttempts=1
 
 csp.client.ssl.enabled = true 
-csp.client.ssl.jks.keystore = classpath:ssl/server/csp-internal.jks
+csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 csp.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
-#csp.client.ssl.jks.keystore.password = changeme
 
 // il config
 csp.server.protocol = https
@@ -46,7 +45,7 @@ app.tc.path.circles = /tc
 app.tc.path.teams = /tct
 app.tc.client.ssl.enabled=true
 app.tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
-app.tc.client.ssl.jks.keystore.password = 123456
+app.tc.client.ssl.jks.keystore.password = changeme
 
 anon.protocol = http
 anon.host = localhost
