SXCSP-260: Update in properties

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
@@ -44,11 +44,11 @@ spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.mail.host=${XXXMAILSERVERHOSTXXX:smtp.mailgun.org}
-spring.mail.port=${XXXMAILSERVERPORTXXX:587}
-spring.mail.username=${XXXMAILUSERNAMEXXX:do-not-reply@sastix.com}
-spring.mail.password=${XXXMAILPASSWORDXXX:a!Str-1-3-X2}
-spring.mail.properties.mail.smtp.socketFactory.port=${XXXMAILSERVERPORTXXX:587}
+spring.mail.host=${XXXMAILSERVERHOSTXXX}
+spring.mail.port=${XXXMAILSERVERPORTXXX}
+spring.mail.username=${XXXMAILUSERNAMEXXX}
+spring.mail.password=${XXXMAILPASSWORDXXX}
+spring.mail.properties.mail.smtp.socketFactory.port=${XXXMAILSERVERPORTXXX}
 
 # spring.thymeleaf settings
 spring.thymeleaf.mode=LEGACYHTML5
