--- a/deployment/docker/applications/intelmq/docker-compose.yml
+++ b/deployment/docker/applications/intelmq/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     hostname: csp-imq-adapter
     env_file:
         - .env
-    command: java  -Xmx512m -Dspring.profiles.active=docker -Dcsp.client.ssl.jks.keystore.password=123456   -jar server.jar
+    command: java  -Xmx512m -Dspring.profiles.active=docker -jar server.jar
     working_dir: /opt/csp
     ports:
         - 80
