SXCSP-260: Support email "from" with InternetAddress object, and update docker properties

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
@@ -7,7 +7,10 @@ regrep.basis.yearly=true
 
 # Regular Reports Email object sender/recipient address
 regrep.from=<sender-email>
-regrep.to=<recipient-email>
+# deprecated regrep.to=<recipient-email>
+
+app.mail.sender.name=CSP Admin
+app.mail.sender.email=user@example.com
 
 # Cron Expressions
 regrep.cron.daily=0 0 9 ? * *
