--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
@@ -12,8 +12,11 @@ regrep.basis.yearly=true
 
 # Regular Reports Email object sender/recipient address
 # see here: https://confluence.sastix.com/pages/viewpage.action?spaceKey=SXCSP&title=SMTP+configuration
-regrep.from=${MAIL_SENDER_EMAIL}
+# deprecated regrep.from=${MAIL_SENDER_EMAIL}
 regrep.to=${MAIL_ADMIN_EMAIL}
+
+app.mail.sender.name=${MAIL_SENDER_NAME}
+app.mail.sender.email=${MAIL_SENDER_EMAIL}
 
 # Cron Expressions
 regrep.cron.daily=0 0 9 ? * *
