SXCSP-260: Fixes in json query, support multiple "to" and other minor stuff

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
@@ -6,8 +6,8 @@ regrep.basis.quarterly=true
 regrep.basis.yearly=true
 
 # Regular Reports Email object sender/recipient address
-regrep.from=<sender-email>
-# deprecated regrep.to=<recipient-email>
+#deprecated regrep.from=<sender-email>
+regrep.to=email@example.com, email2@example.com
 
 app.mail.sender.name=CSP Admin
 app.mail.sender.email=user@example.com
