SXCSP-260: Change regrep.to property to have the value of MAIL_SENDER_EMAIL in docker properties

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
@@ -13,7 +13,7 @@ regrep.basis.yearly=true
 # Regular Reports Email object sender/recipient address
 # see here: https://confluence.sastix.com/pages/viewpage.action?spaceKey=SXCSP&title=SMTP+configuration
 # deprecated regrep.from=${MAIL_SENDER_EMAIL}
-regrep.to=${MAIL_ADMIN_EMAIL}
+regrep.to=${MAIL_SENDER_EMAIL}
 
 app.mail.sender.name=${MAIL_SENDER_NAME}
 app.mail.sender.email=${MAIL_SENDER_EMAIL}
