Changing Volume permissions

--- a/deployment/docker/base-images/misp-image/Dockerfile
+++ b/deployment/docker/base-images/misp-image/Dockerfile
@@ -188,6 +188,8 @@ RUN touch /.firstboot.tmp
 RUN touch /var/www/MISP/app/tmp/logs/error.log
 RUN touch /var/www/MISP/app/tmp/logs/debug.log
 RUN chmod -R 777 /var/www/MISP/app/tmp/logs/
+RUN chown -R www-data:www-data /var/www/MISP/app/tmp/logs/
+VOLUME ["/var/www/MISP/app/tmp/logs"]
 
 # Make a backup of /var/www/MISP to restore it to the local moint point at first boot
 WORKDIR /var/www/MISP
