--- a/deployment/docker/applications/vcb/config/jitsi/videobridge/config
+++ b/deployment/docker/applications/vcb/config/jitsi/videobridge/config
@@ -17,4 +17,4 @@ JVB_OPTS=""
 
 
 # adds java system props that are passed to jvb (default are for home and logging config file)
-JAVA_SYS_PROPS="$JVB_EXTRA_JVM_PARAMS -Dnet.java.sip.communicator.SC_HOME_DIR_LOCATION=/etc/jitsi -Dnet.java.sip.communicator.SC_HOME_DIR_NAME=videobridge -Dnet.java.sip.communicator.SC_LOG_DIR_LOCATION=/var/log/jitsi -Djava.util.logging.config.file=/etc/jitsi/videobridge/logging.properties"
+JAVA_SYS_PROPS="$JVB_EXTRA_JVM_PARAMS -Djava.net.preferIPv4Stack=true -Dnet.java.sip.communicator.SC_HOME_DIR_LOCATION=/etc/jitsi -Dnet.java.sip.communicator.SC_HOME_DIR_NAME=videobridge -Dnet.java.sip.communicator.SC_LOG_DIR_LOCATION=/var/log/jitsi -Djava.util.logging.config.file=/etc/jitsi/videobridge/logging.properties"
