Fixes to port 80 for jitsi meet

--- a/deployment/docker/applications/vcb/Dockerfile.jitsimeet
+++ b/deployment/docker/applications/vcb/Dockerfile.jitsimeet
@@ -23,7 +23,7 @@ COPY start.sh /start.sh
 
 ENV DOMAIN=test.com STUN=stun.ekiga.net BRIDGE_IP=1.2.3.4 BRIDGE_TCP_PORT=4443 BRIDGE_UDP_PORT=10000
 
-EXPOSE 4443 10000/udp
+EXPOSE 80 4443 10000/udp
 
 CMD /start.sh
 
