Re-Fix SMTP properties

--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
@@ -45,9 +45,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
 spring.mail.properties.mail.smtp.socketFactory.port=587
 
-XXXMAILSERVERHOSTXXX=${spring.mail.host}
-XXXMAILSERVERPORTXXX=${spring.mail.port}
-XXXMAILUSERNAMEXXX=${spring.mail.username}
-XXXMAILPASSWORDXXX=${spring.mail.password}
+MAIL_SERVER_HOST=${spring.mail.host}
+MAIL_SERVER_PORT=${spring.mail.port}
+MAIL_USERNAME=${spring.mail.username}
+MAIL_PASSWORD=${spring.mail.password}
 MAIL_SENDER_NAME=${app.mail.sender.name}
 MAIL_SENDER_EMAIL=${app.mail.sender.email}
