--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-docker.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-docker.properties
@@ -28,11 +28,11 @@ enable.oam=true
 ###
 h2.db.file = /opt/vcb/data/vcbdb
 
-spring.mail.host=${XXXMAILSERVERHOSTXXX:smtp.mailgun.org}
-spring.mail.port=${XXXMAILSERVERPORTXXX:587}
-spring.mail.username=${XXXMAILUSERNAMEXXX:do-not-reply@sastix.com}
-spring.mail.password=${XXXMAILPASSWORDXXX:a!Str-1-3-X2}
-spring.mail.properties.mail.smtp.socketFactory.port=${XXXMAILSERVERPORTXXX:587}
+spring.mail.host=${MAIL_SERVER_HOST}
+spring.mail.port=${MAIL_SERVER_PORT:587}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.socketFactory.port=${MAIL_SERVER_PORT:587}
 
 
 ###
