--- a/deployment/docker/applications/owncloud/docker-compose.yml
+++ b/deployment/docker/applications/owncloud/docker-compose.yml
@@ -5,9 +5,11 @@ services:
   owncloud:
     image: owncloud:1.0
     container_name: csp-oc
-    ports:
-      - ${OC_HTTPS_PORT}:443
-      - ${OC_HTTP_PORT}:80
+#    ports:
+#      - ${OC_HTTPS_PORT}:443
+#      - ${OC_HTTP_PORT}:80
+    expose:
+       - "${OC_DOCR_PORT}"
     depends_on:
       - ocdb
       - ocredis
