services should not expose themselves to the world. they should  accesible only from the rest of the services and not outside (changed "expose" to "port"?)

--- a/deployment/docker/applications/intelmq/docker-compose.yml
+++ b/deployment/docker/applications/intelmq/docker-compose.yml
@@ -13,7 +13,7 @@ services:
        - /opt/csp/intelmq-fileinput/:/tmp/intelmq-fileinput
        - /opt/csp/intelmq-fileoutput/:/tmp/intelmq-fileoutput
        - /opt/csp/logs/imq:/opt/intelmq/var/log
-    expose:
+    ports:
        - ${INTELMQ_DOCR_PORT}
 
   intelmq-adapter:
