Adding limit message in exc logs table fragment

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
@@ -61,4 +61,4 @@ th.email.recipient=Administrator
 th.email.subject=Subject sample
 th.email.message=Here is the %s for the number of documents created %s %s.
 th.email.signature=Regular Reports Service
-th.email.es.logs.exc.limit.message=Displaying %d out of %d results. Please use Kibana to view the rest of the exception logs.
+th.email.es.logs.exc.limit.message=Displaying %s out of %s results. Please use Kibana to view the rest of the exception logs.
