Adding exc log placeholders also for application-docker properties

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application-docker.properties
@@ -33,6 +33,7 @@ app.es.protocol=https
 app.es.host=${ES_LOCAL_DOMAIN}
 app.es.port=${ES_PORT}
 app.es.path=${ES_PATH_BASE}
+app.es.logs.exc.limit.size=10
 app.es.client.ssl.enabled=true
 app.es.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 app.es.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
@@ -64,3 +65,4 @@ th.email.recipient=Administrator
 th.email.subject=Subject sample
 th.email.message=Here is the %s for the number of documents created %s %s.
 th.email.signature=Regular Reports Service
+th.email.es.logs.exc.limit.message=Displaying %s out of %s results. Please use Kibana to view the rest of the exception logs.
