--- a/deployment/docker/applications/intelmq/csp-config/runtime.conf
+++ b/deployment/docker/applications/intelmq/csp-config/runtime.conf
@@ -13,8 +13,8 @@
             "use_json": true
         }
     },
-    "file-collector": {
-        "description": "Fileinput collector fetches data from a file.",
+    "csp-file-collector": {
+        "description": "CSP Fileinput collector fetches data from a file.",
         "group": "Collector",
         "module": "intelmq.bots.collectors.file.collector_file",
         "name": "File",
