--- a/deployment/docker/applications/intelmq/csp-config/pipeline.conf
+++ b/deployment/docker/applications/intelmq/csp-config/pipeline.conf
@@ -2,7 +2,7 @@
     "csp-rest-api-output": {
         "source-queue": "csp-rest-api-output-queue"
     },
-    "file-collector": {
+    "csp-file-collector": {
         "destination-queues": [
             "csp-rest-api-output-queue"
         ]
