--- a/deployment/docker/applications/viper/docker-compose.yml
+++ b/deployment/docker/applications/viper/docker-compose.yml
@@ -1,16 +1,19 @@
-version: '2'
+version: '3'
 services:
 
   viper-ui:
     env_file:
-      - ../../base-images/python27-viper/.env
-    image: viper:latest
-    container_name: viper-ui
+      - .env
+    image: csp-python27-viper:1.0
+    container_name: csp-viper
     domainname: ${LOCAL_DOMAIN}
     hostname: csp-viper
     ports:
       - 8083:8083
     command: python viper/viper-web -H 0.0.0.0 -p 8083
     working_dir: /home/viper
-    expose:
-      - 8083
+
+networks:
+  default:
+    external:
+      name: ${LOCAL_DOMAIN}
