--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -188,3 +188,5 @@ security.basic.enabled=false
 
 enable.oam=true
 check.cspid.cert.header = CspId-Client-Certificate-Header
+
+spring.profiles.active=develop
