viper dockerization fixes, viper VT module, SSO

--- a/deployment/docker/applications/viper/docker-compose.yml
+++ b/deployment/docker/applications/viper/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - /opt/csp/logs/:/home/viper/viper/logs
       - ViperDatavolume:/home/viper/viper
       - MISPSharedDatavolume:/run/secrets
+      - SSLDatavolume:/opt/ssl/
 
 networks:
   default:
@@ -25,5 +26,7 @@ networks:
 volumes:
     ViperDatavolume:
         external: true
-    MISPDatavolume:
-            external: true
+    MISPSharedDatavolume:
+        external: true
+    SSLDatavolume:
+        external: true
