Enable activemq for camel messages by default

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
@@ -16,6 +16,10 @@ external.ssl.keystore.passphrase = ${IL_SSL_KEYSTORE_PASS}
 #obsolete for production - use activemq broker
 embedded.activemq.data.path = /opt/data/activemq
 
+# Active MQ
+apache.camel.use.activemq = true
+spring.activemq.broker-url=tcp://csp-activemq:61616
+
 # ----------------------------------------
 # CSP Application data type flows
 # ----------------------------------------
