SXCSP-456: IL platform has been configured to be async non blocking, so messages towards inactive CSPs will not affect/block messages towards active ones.

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
@@ -13,6 +13,9 @@ server.ssl.key-password=<secret>
 server.ssl.client-auth=want
 server.ssl.allow.all.hostname = true
 
+# Default Apache camel endpoint
+server.camel.default.endpoint = vm
+
 server.subdomain.prefix = <tbd>
 
 spring.jackson.date-format= yyyy-MM-dd'T'HH:mm:ssZ
