--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -15,6 +15,9 @@ server.subdomain.prefix = integration
 
 server.camel.rest.service.is.async = true
 
+# Default Apache camel endpoint
+server.camel.default.endpoint = direct
+
 spring.jackson.date-format= yyyy-MM-dd'T'HH:mm:ssZ
 
 embedded.activemq.start = false
