--- a/deployment/docker/applications/viper/docker-compose.yml
+++ b/deployment/docker/applications/viper/docker-compose.yml
@@ -10,13 +10,15 @@ services:
     hostname: csp-viper
     ports:
       - 8083:8083
-    command: python viper-web -H 0.0.0.0 -p 8083
+    command: python3 viper-web -H 0.0.0.0 -p 8083
     working_dir: /home/viper/viper
     volumes:
       - /opt/csp/logs/:/home/viper/viper/logs
       - ViperDatavolume:/home/viper/viper
       - MISPSharedDatavolume:/run/secrets
       - SSLDatavolume:/opt/ssl/
+    environment:
+      - MISP_LOCAL_DOMAIN=https://${MISP_LOCAL_DOMAIN}
 
 networks:
   default:
