--- a/deployment/docker/base-images/python27-viper/config/viper.conf
+++ b/deployment/docker/base-images/python27-viper/config/viper.conf
@@ -26,7 +26,7 @@ connection =
 [logging]
 # log file (full path - e.g. /tmp/viper.log)
 # If left blank, the default will be $storage_path/viper.log
-log_file =/home/viper/viper/logs/viper.log
+log_file =/opt/csplogs/viper.log
 
 # enable additional debug logging
 debug = False
