--- a/deployment/docker/base-images/python27-viper/config/viper.conf
+++ b/deployment/docker/base-images/python27-viper/config/viper.conf
@@ -11,7 +11,7 @@ store_output = True
 [paths]
 # Path to a folder that will be used for storing samples and resources.
 # If left blank, the default will be $HOME/.viper
-storage_path =/home/viper
+storage_path =/home/viper/resources
 
 [database]
 # Configure the database connection type example shown below
