--- a/csp-apps/anonymization/anon-server/src/main/resources/application.properties
+++ b/csp-apps/anonymization/anon-server/src/main/resources/application.properties
@@ -38,3 +38,9 @@ spring.http.multipart.max-request-size=2048KB
 key.update=10000
 
 enable.oam=true
+
+# LOGGING
+logging.level.com.intrasoft.csp=INFO
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+logging.level.org.apache=WARN
