--- a/csp-apps/configuration/conf-server/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application.properties
@@ -68,3 +68,9 @@ enable.oam=true
 spring.thymeleaf.cache=false
 #server.tomcat.access_log_enabled=false
 #server.tomcat.basedir=target/tomcat
+
+# LOGGING
+logging.level.com.intrasoft.csp=INFO
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+logging.level.org.apache=WARN
